--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,6 +17,10 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    - name: Start Application
+      run: npm start &
+      env:
+        PORT: 8080
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v4
