--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm run eslint
     - name: Build
       run: npm run build
-    - name: Test
-      run: npm run test
+    #- name: Test
+    # run: npm run test
     - name: Trigger deployment
       run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
